<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="16dp"
    tools:context="com.example.tugasday09.data.model.LoginActivity">

    <TextView
        android:id="@+id/tvPleaseLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <ImageView
            android:id="@+id/ivUsername"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_account_circle_24" />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:hint="@string/username" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="13dp">
        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_app_blocking_24"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tvCreateAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/create_your_account"/>

</LinearLayout>